--- a/UCSC_Course_Planner/templates/selectmajor copy.html
+++ b/UCSC_Course_Planner/templates/selectmajor copy.html
@@ -9,6 +9,7 @@
 
     <!-- Le styles -->
     <link href="static/css/bootstrap.css" rel="stylesheet">
+    <link rel="shortcut icon" href="/favicon.ico">
     <style type="text/css">
         body {
             padding-top: 60px;
@@ -16,6 +17,7 @@
         }
     </style>
     <link href="static/css/bootstrap-responsive.css" rel="stylesheet">
+    
 
 
     <style type="text/css">
